--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,145 @@ html, body {
           box-sizing: border-box;
 }
 
-.conatiner {
+.container {
   max-width: 1200px;
   margin: 0 auto;
-}/*# sourceMappingURL=style.css.map */
+}
+
+.header {
+  width: 100%;
+  padding: 15px 0;
+  background-color: #5FC0CE;
+}
+.header__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.header__logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+  width: 150px;
+}
+.header__logo-img {
+  width: 100px;
+  height: 100px;
+}
+.header__logo-img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.header__logo-name {
+  width: 50px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  line-height: 150%;
+  letter-spacing: 1.2px;
+  font-size: 18px;
+  color: #fff;
+  text-shadow: 0 0 15px #eccd3f;
+}
+.header__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 15px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  list-style: none;
+}
+.header__link {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  line-height: 150%;
+  letter-spacing: 1.2px;
+  font-size: 18px;
+  color: #015965;
+  text-decoration: none;
+  position: relative;
+}
+.header__link::before {
+  content: "";
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 0;
+  height: 2px;
+  background-color: #015965;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.header__link:hover::before {
+  width: 100%;
+}
+.header__contacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.header__contacts-icon {
+  width: 50px;
+  height: 50px;
+}
+.header__contacts-icon img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.header__contacts-link {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  line-height: 150%;
+  letter-spacing: 1.2px;
+  font-size: 18px;
+  color: #015965;
+  text-decoration: none;
+}
+
+.services__item {
+  width: 100%;
+  height: 823px;
+}
+.services__item-img {
+  position: relative;
+  width: 100%;
+  height: 823px;
+}
+.services__item-img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.services__item-name {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  line-height: 150%;
+  letter-spacing: 1.2px;
+  font-size: 50px;
+  color: #fff;
+}
