--- a/scss/basic/style.scss
+++ b/scss/basic/style.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-
+@import 'var';
 html,body {
     margin: 0;
     padding: 0;
@@ -12,7 +12,10 @@ html,body {
     font-family: "Montserrat", sans-serif;
     box-sizing: border-box;
 }
-.conatiner {
+.container {
     max-width: 1200px;
     margin: 0 auto;
 }
+
+@import '../block/header';
+@import '../block/services';
