--- a/scss/basic/style.scss
+++ b/scss/basic/style.scss
@@ -1,11 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import 'var';
+html {
+    scroll-behavior: smooth;
+}
 html,body {
     margin: 0;
     padding: 0;
     font-family: "Montserrat", sans-serif;
     box-sizing: border-box;
 }
+
 * {
     margin: 0;
     padding: 0;
@@ -13,9 +17,30 @@ html,body {
     box-sizing: border-box;
 }
 .container {
-    max-width: 1200px;
+    max-width: 1600px;
     margin: 0 auto;
 }
-
+.big__box {
+    position: relative;
+}
+.title {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 900;
+    font-size: 60px;
+    line-height: 150%;
+    letter-spacing: 1.2px;
+    color: $textColor;
+    text-align: center;
+}
+@import '../block/btn';
 @import '../block/header';
 @import '../block/services';
+@import '../block/about';
+@import '../block/stock';
+@import '../block/advantages';
+@import '../block/feedback';
+@import '../block/request';
+@import '../block/footer';
+@import '../block/arrow-top';
+@import '../block/preloaded';
+@import '../block/popup';
